--- a/public/stylesheets/chaos.css
+++ b/public/stylesheets/chaos.css
@@ -67,12 +67,19 @@
 	line-height: 32px;
 	border: 1px solid silver;
 	margin: 1px;
-	padding: 0 4px;
+	padding-left: 4px;
 	outline: 0;
 	list-style: none;
 }
 #players_panel #players_list li .name {
 	float: left;
+}
+
+#players_panel #players_list li.operator .name {
+	padding-right: 22px;
+	background-image: url(/images/icons/key.png);
+	background-repeat: no-repeat;
+	background-position: right center;
 }
 
 #players_panel #players_list li.me {
@@ -82,6 +89,16 @@
 	font-weight: bold;
 }
 #players_panel #players_list li .self_actions {
+	float: right;
+	padding-right: 4px;
+	display: none;
+}
+#players_panel #players_list li.me .self_actions {
+	display: block;
+}
+
+#players_panel #players_list li .operator_actions {
+	padding-right: 4px;
 	float: right;
 }
 
