add visual feedback of own operator status (showing/hiding operator actions as appropriate)

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_tag "becomePlayer(#{me.id})" if playing? %>
+<%= javascript_tag "becomePlayer(#{me.id}, #{me.is_operator?})" if playing? %>
 
 <div id="board">
 </div>
