--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -3,12 +3,13 @@
 		<b>Player name</b><br />
 		<%= f.text_field :name %>
 	</p>
-	<p>
+	<p style="float: left;">
 		<b>Avatar</b><br />
 		<%= f.select :wizard_type, Player::WIZARD_TYPES.collect{|w| [w]}, :include_blank => f.object.wizard_type.blank? %>
 	</p>
-	<p>
+	<p style="float: left;">
 		<b>Colour</b><br />
 		<%= f.select :wizard_colour, Player::WIZARD_COLOURS.collect{|c| [c]}, :include_blank => f.object.wizard_colour.blank? %>
 	</p>
+	<br style="clear: both;" />
 <% end %>
