--- a/app/views/games/_player.html.erb
+++ b/app/views/games/_player.html.erb
@@ -4,10 +4,12 @@
 	<% if player.is_operator? %>operator<% end %>">
 	<%= image_tag player.wizard_sprite.image, :size => '32x32', :alt => '', :class => 'avatar' %>
 	<span class="name"><%=h player.name %></span>
-	<span class="self_actions"><%= link_to 'Leave', player, :class => "remote delete" %></span>
-	<span class="operator_actions">
-		<%= link_to 'Kick', player, :class => "remote delete" %>
-		<%= link_to 'Op', op_player_path(player), :class => "remote post op_link" %>
-		<%= link_to 'Deop', deop_player_path(player), :class => "remote post deop_link" %>
+	<span class="actions self_actions"><%= link_to 'Leave', player, :class => "remote delete" %></span>
+	<span class="for_operator">
+		<span class="actions operator_actions">
+			<%= link_to 'Kick', player, :class => "remote delete" %>
+			<%= link_to 'Op', op_player_path(player), :class => "remote post op_link" %>
+			<%= link_to 'Deop', deop_player_path(player), :class => "remote post deop_link" %>
+		</span>
 	</span>
 </li>
