--- a/app/views/games/_player.html.erb
+++ b/app/views/games/_player.html.erb
@@ -1,6 +1,7 @@
 <% highlight_me ||= false %>
 <li id="player_<%= player.id %>" class="
 	<% if highlight_me and playing? and player == me %>me<% end %>
+	<% if player.awaiting_action? %>awaiting_action<% end %>
 	<% if player.is_operator? %>operator<% end %>">
 	<%= image_tag player.wizard_sprite.image, :size => '32x32', :alt => '', :class => 'avatar' %>
 	<span class="name"><%=h player.name %></span>
