--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,6 +4,7 @@
 	<% if playing? %>
 		becomePlayer(<%= me.id %>, <%= me.is_operator? %>)
 	<% end %>
+	var hasPendingSpell = <%= !!(playing? and me.next_spell) %>
 <% end %>
 
 <div id="state_of_play">
@@ -57,6 +58,11 @@
 			<% end %>
 		</ul>
 		<div id="spell_info_view">
+		</div>
+		<div id="next_spell" class="conditional panel when_has_pending_spell">
+			<% if playing? and me.next_spell %>
+				<%= render :partial => 'spells/chosen_spell', :object => me.next_spell %>
+			<% end %>
 		</div>
 		<br style="clear: both;" />
 	</div>
