--- a/app/views/games/_sprite.erb
+++ b/app/views/games/_sprite.erb
@@ -1,1 +1,1 @@
-putSprite(<%= sprite.id %>, <%= image_path(sprite.image).to_json %>, <%= sprite.x %>, <%= sprite.y %>, <%= sprite.player.id %>)
+putSprite(<%= sprite.id %>, <%= image_path(sprite.image).to_json %>, <%= sprite.x %>, <%= sprite.y %>, <%= sprite.player.id %>);
