--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -24,6 +24,32 @@
 			# _sprite.js.erb rather than _sprite.erb, because naming conventions dictate
 			# that that's what this ought to be called %>
 	<% end %>
+	<div id="prompt">
+		<ul class="actions">
+			<li class="conditional when_my_turn">
+				<%= link_to 'End turn', end_turn_game_path, :class => 'remote post' %>
+			</li>
+		</ul>
+		<span id="prompt_message">
+			<% if @game.open? %>
+				Waiting for players to join...
+			<% elsif @game.choosing_spells? %>
+				<% if !playing? %>
+					Wizards are choosing spells
+				<% elsif me.next_spell %>
+					Waiting for wizards to choose spells...
+				<% else %>
+					Choose your spell
+				<% end %>
+			<% else %>
+				<% if playing? and @game.current_player == me %>
+					Your turn
+				<% else %>
+					<%=h @game.current_player.name %>'s turn
+				<% end %>
+			<% end %>
+		</span>
+	</div>
 	<div id="events_panel">
 		<ul id="events_list">
 		</ul>
@@ -34,7 +60,6 @@
 	<div id="title_panel" class="panel">
 		<h1>Chaos</h1>
 		<h2>The Battle Of Wizards</h2>
-		<h3>Game <%= @game.id %> - <span id="game_status"></span></h3>
 	</div>
 	
 	<div id="players_panel" class="panel">
@@ -55,9 +80,6 @@
 		</div>
 		<div class="conditional panel for_operator when_game_is_startable">
 			<%= link_to 'Start game', start_game_path, :class => 'remote post' %>
-		</div>
-		<div class="conditional panel when_my_turn">
-			<%= link_to 'End turn', end_turn_game_path, :class => 'remote post' %>
 		</div>
 	</div>
 	
