--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
 	<title>Games: <%= controller.action_name %></title>
 	<%= stylesheet_link_tag 'scaffold' %>
 	<%= stylesheet_link_tag 'chaos' %>
+	<%= stylesheet_link_tag 'thickbox' %>
 	<%= stylesheet_link_tag *(@stylesheets.uniq) if @stylesheets %>
 	<%= javascript_include_tag :defaults %>
 	<%= javascript_include_tag 'jquery-1.2.3.min.js' %>
 	<%= javascript_include_tag 'chaos.js' %>
+	<%= javascript_include_tag 'thinbox.js' %>
 	<%= javascript_include_tag *(@javascripts.uniq) if @javascripts %>
 </head>
 <body>
