implement casting spells at sprites (as distinct from spaces), and disbelieve spell

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -10,7 +10,7 @@
 
 	<% if playing? and me.casting? %>
 		jq(function() {
-			showCastingPositions(<%= me.casting_positions.to_json %>);
+			showCastingTargets(<%= me.next_spell.casting_targets.to_json %>);
 		});
 	<% end %>
 <% end %>
