--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
 	<%= javascript_include_tag *(@javascripts.uniq) if @javascripts %>
 </head>
 <body>
+<div class="login_bar">
+	<% if logged_in? %>
+		<strong>Greetings</strong>, O great wizard <%=h current_user.login %>! <%= link_to 'Log out', logout_url %>
+	<% else %>
+		<%= link_to 'Log in', login_url %> | Register (not required, but allows you to resume a game after disconnecting)
+	<% end %>
+</div>
 
 <p style="color: green"><%= flash[:notice] %></p>
 
