let users own wizards; attach any wizards in the session to a user upon logging in / registering

--- a/app/views/games/_announcement.html.erb
+++ b/app/views/games/_announcement.html.erb
@@ -1,5 +1,6 @@
 <% game = announcement %>
-<li id="game_<%= game.id %>">
+<% attach_id = true if attach_id.nil? %>
+<li <% if attach_id %>id="game_<%= game.id %>"<% end %>>
 	<div class="heading"><%= link_to "Game #{game.id}", game %> - <%= pluralize(game.players.count, 'player', 'players') %></div>
 	<div class="info">
 		started <%= time_ago_in_words(game.created_at) %> ago.
