--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	<% if logged_in? %>
 		<strong>Greetings</strong>, O great wizard <%=h current_user.login %>! <%= link_to 'Log out', logout_url %>
 	<% else %>
-		<%= link_to 'Log in', login_url %> | Register (not required, but allows you to resume a game after disconnecting)
+		<%= link_to 'Log in', login_url %> | <%= link_to 'Register', new_user_path %> (not required, but allows you to resume a game after disconnecting)
 	<% end %>
 </div>
 
