--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 <body>
 <div class="login_bar">
 	<% if logged_in? %>
-		<strong>Greetings</strong>, O great wizard <%=h current_user.login %>! <%= link_to 'Log out', logout_url %>
+		<strong>Greetings</strong>, O great wizard <%=h current_user.login %>! <%= link_to 'Edit user', edit_user_path %> | <%= link_to 'Log out', logout_url %>
 	<% else %>
 		<%= link_to 'Log in', login_url %> | <%= link_to 'Register', new_user_path %> (not required, but allows you to resume a game after disconnecting)
 	<% end %>
